[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Buildings/Tower.gd" type="Script" id=1]
[ext_resource path="res://src/Buildings/MoveableBuilding.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.2, 1.2 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.2, 0.2, 1.2 )

[node name="Tower" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="BuildingBlocker" type="Area" parent="Edge" index="2"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Edge/BuildingBlocker" index="0"]

[node name="MovementBlocker" type="Spatial" parent="Edge" index="3"]

[node name="BlockClockwise" type="Area" parent="Edge/MovementBlocker" index="0"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Edge/MovementBlocker/BlockClockwise" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.09318, 0, 0 )
shape = SubResource( 1 )

[node name="BlockCounterClockwise" type="Area" parent="Edge/MovementBlocker" index="1"]
collision_layer = 2147483652
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Edge/MovementBlocker/BlockCounterClockwise" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.65838, 0, 0 )
shape = SubResource( 2 )

[node name="Range" type="Area" parent="Edge" index="4"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="Edge/Range" index="0"]

[node name="Timer" type="Timer" parent="." index="1"]
[connection signal="area_entered" from="Edge/Range" to="." method="_on_Range_area_entered"]
[connection signal="area_exited" from="Edge/Range" to="." method="_on_Range_area_exited"]
